# projeto-tg

./: .cproject  .gitignore  .project  README.md  STM32F446RETX_FLASH.ld  proj_tg.ioc
Scripts/: README.md  SD_Card.ipynb
python_code/: .gitignore  ExtractFeature.py  Main.ipynb  README.md  TrainClassifier.ipynb  pyproject.toml
python_code/data/c_models/: decision_tree_model.h  extra_trees_model.h  gaussian_naive_bayes_model.h  knn_model.h  random_forest_model.h
python_code/data/c_models/test_models/: compile_test_model.sh  test_model.c
python_code/data/extracted_features/: extracted_features_like_artigo.csv  extracted_features_like_artigo_training.csv  extracted_features_like_artigo_validation.csv  features_like_artigo.csv
python_code/data/extracted_features/desktop/: features_f1_desktop.csv  features_f2_desktop.csv  features_f3_desktop.csv  features_health_desktop.csv  features_off_desktop.csv
python_code/data/processed/: features_off_desktop.csv
python_code/notebooks/: DataAnalyzer.ipynb  FeatureAnalyser.ipynb  FeatureAnalyzer.ipynb  FeatureExtractor.ipynb  FeatureExtractor_uC.ipynb  Main.ipynb  SD_Card.ipynb  Test_EMLEARN.ipynb  Teste_Geracao_Filtro.ipynb  Teste_GeradorFiltroPassaFaixa.ipynb  Teste_converter_audio2wav.ipynb  TimeDataAnalyzer.ipynb  TrainClassifier.ipynb
python_code/notebooks/scripts/: ExtractFeatures.py  doFilterHP.py
python_code/notebooks/tg_utils/: ExtractFeatures.py  Flac2WAV_converter.py  GeradorFiltro.py  __init__.py  split_audio.py
python_code/scritps/: aliasing_chart.py  ml_model_chart.py  table_wav.py
stm32_code/: .cproject  (+4 more)
(+88 files in other folders)
